# serializer version: 1
# name: TestVisitorFieldSnapshots.test_excluded_fields_Action
  list([
    'bytecode',
    'bytecode_error',
    'embedding_last_synced_at',
    'embedding_version',
    'events',
    'is_calculating',
    'last_calculated_at',
    'last_summarized_at',
    'post_to_slack',
    'slack_message_format',
    'summary',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_excluded_fields_Cohort
  list([
    'count',
    'errors_calculating',
    'groups',
    'is_calculating',
    'last_calculation',
    'last_error_at',
    'pending_version',
    'people',
    'version',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_excluded_fields_Dashboard
  list([
    'analytics_dashboards',
    'data_color_theme',
    'data_color_theme_id',
    'is_shared',
    'last_accessed_at',
    'last_refresh',
    'share_token',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_excluded_fields_DashboardTile
  list([
    'filters_hash',
    'last_refresh',
    'refresh_attempt',
    'refreshing',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_excluded_fields_EarlyAccessFeature
  list([
    'created_at',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_excluded_fields_Experiment
  list([
    'archived',
    'conclusion',
    'conclusion_comment',
    'created_at',
    'deleted',
    'end_date',
    'start_date',
    'status',
    'updated_at',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_excluded_fields_ExperimentHoldout
  list([
    'created_at',
    'updated_at',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_excluded_fields_ExperimentSavedMetric
  list([
    'created_at',
    'updated_at',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_excluded_fields_ExperimentToSavedMetric
  list([
    'created_at',
    'updated_at',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_excluded_fields_FeatureFlag
  list([
    '_evaluation_tag_names',
    'analytics_dashboards',
    'deleted',
    'last_called_at',
    'performed_rollback',
    'rollback_conditions',
    'usage_dashboard',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_excluded_fields_Insight
  list([
    'dashboard',
    'dashboards',
    'dive_dashboard',
    'filters_hash',
    'last_modified_at',
    'last_refresh',
    'refresh_attempt',
    'refreshing',
    'short_id',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_excluded_fields_Survey
  list([
    'headline_response_count',
    'headline_summary',
    'internal_response_sampling_flag',
    'internal_targeting_flag',
    'linked_flag',
    'question_summaries',
    'targeting_flag',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_excluded_fields_Survey_actions
  list([
  ])
# ---
# name: TestVisitorFieldSnapshots.test_excluded_fields_Text
  list([
    'last_modified_at',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_primitive_fields_Action
  list([
    'created_at',
    'deleted',
    'description',
    'name',
    'pinned_at',
    'steps_json',
    'updated_at',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_primitive_fields_Cohort
  list([
    'cohort_type',
    'created_at',
    'deleted',
    'description',
    'filters',
    'is_static',
    'kind',
    'last_backfill_person_properties_at',
    'last_calculation_duration_ms',
    'name',
    'query',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_primitive_fields_Dashboard
  list([
    'breakdown_colors',
    'created_at',
    'creation_mode',
    'deleted',
    'deprecated_tags',
    'deprecated_tags_v2',
    'description',
    'filters',
    'name',
    'pinned',
    'quick_filter_ids',
    'restriction_level',
    'variables',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_primitive_fields_DashboardTile
  list([
    'color',
    'deleted',
    'filters_overrides',
    'layouts',
    'show_description',
    'transparent_background',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_primitive_fields_EarlyAccessFeature
  list([
    'description',
    'documentation_url',
    'name',
    'payload',
    'stage',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_primitive_fields_Experiment
  list([
    'description',
    'exposure_criteria',
    'filters',
    'metrics',
    'metrics_secondary',
    'name',
    'only_count_matured_users',
    'parameters',
    'primary_metrics_ordered_uuids',
    'scheduling_config',
    'secondary_metrics',
    'secondary_metrics_ordered_uuids',
    'stats_config',
    'type',
    'variants',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_primitive_fields_ExperimentHoldout
  list([
    'description',
    'filters',
    'name',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_primitive_fields_ExperimentSavedMetric
  list([
    'description',
    'metadata',
    'name',
    'query',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_primitive_fields_ExperimentToSavedMetric
  list([
    'metadata',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_primitive_fields_FeatureFlag
  list([
    'active',
    'bucketing_identifier',
    'created_at',
    'ensure_experience_continuity',
    'evaluation_runtime',
    'filters',
    'has_encrypted_payloads',
    'has_enriched_analytics',
    'is_remote_configuration',
    'key',
    'name',
    'updated_at',
    'version',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_primitive_fields_Insight
  list([
    'color',
    'created_at',
    'deleted',
    'deprecated_tags',
    'deprecated_tags_v2',
    'derived_name',
    'description',
    'favorited',
    'filters',
    'is_sample',
    'layouts',
    'name',
    'order',
    'query',
    'query_metadata',
    'saved',
    'updated_at',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_primitive_fields_Survey
  list([
    'appearance',
    'archived',
    'conditions',
    'created_at',
    'current_iteration',
    'current_iteration_start_date',
    'description',
    'enable_iframe_embedding',
    'enable_partial_responses',
    'end_date',
    'form_content',
    'iteration_count',
    'iteration_frequency_days',
    'iteration_start_dates',
    'name',
    'questions',
    'response_sampling_daily_limits',
    'response_sampling_interval',
    'response_sampling_interval_type',
    'response_sampling_limit',
    'response_sampling_start_date',
    'responses_limit',
    'schedule',
    'start_date',
    'translations',
    'type',
    'updated_at',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_primitive_fields_Survey_actions
  list([
  ])
# ---
# name: TestVisitorFieldSnapshots.test_primitive_fields_Text
  list([
    'body',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_relation_fields_Action
  list([
    'created_by',
    'project',
    'survey_set',
    'team',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_relation_fields_Cohort
  list([
    'created_by',
    'team',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_relation_fields_Dashboard
  list([
    'created_by',
    'insights',
    'team',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_relation_fields_DashboardTile
  list([
    'button_tile',
    'dashboard',
    'insight',
    'text',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_relation_fields_EarlyAccessFeature
  list([
    'feature_flag',
    'team',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_relation_fields_Experiment
  list([
    'created_by',
    'exposure_cohort',
    'feature_flag',
    'holdout',
    'saved_metrics',
    'team',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_relation_fields_ExperimentHoldout
  list([
    'created_by',
    'team',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_relation_fields_ExperimentSavedMetric
  list([
    'created_by',
    'experiments',
    'team',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_relation_fields_ExperimentToSavedMetric
  list([
    'experiment',
    'saved_metric',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_relation_fields_FeatureFlag
  list([
    'created_by',
    'last_modified_by',
    'team',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_relation_fields_Insight
  list([
    'created_by',
    'last_modified_by',
    'subscriptions_dashboard_export',
    'team',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_relation_fields_Survey
  list([
    'actions',
    'created_by',
    'linked_insight',
    'product_tours',
    'team',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_relation_fields_Survey_actions
  list([
    'action',
    'survey',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_relation_fields_Text
  list([
    'created_by',
    'last_modified_by',
    'team',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_skipped_fields_Action
  list([
    'DoesNotExist',
    'MultipleObjectsReturned',
    '__doc__',
    '__module__',
    '__str__',
    '_meta',
    'action_steps',
    'bytecode',
    'bytecode_error',
    'created_by_id',
    'embedding_last_synced_at',
    'embedding_version',
    'events',
    'get_analytics_metadata',
    'get_file_system_representation',
    'get_file_system_unfiled',
    'get_next_by_created_at',
    'get_next_by_last_calculated_at',
    'get_next_by_updated_at',
    'get_previous_by_created_at',
    'get_previous_by_last_calculated_at',
    'get_previous_by_updated_at',
    'get_step_events',
    'id',
    'is_calculating',
    'last_calculated_at',
    'last_summarized_at',
    'plugin_configs',
    'post_to_slack',
    'project_id',
    'refresh_bytecode',
    'save',
    'slack_message_format',
    'steps',
    'summary',
    'tagged_items',
    'team_id',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_skipped_fields_Cohort
  list([
    'DoesNotExist',
    'MultipleObjectsReturned',
    '__annotations__',
    '__doc__',
    '__module__',
    '__repr__',
    '__str__',
    '_get_uuids_for_distinct_ids_batch',
    '_get_uuids_for_emails_batch',
    '_get_uuids_for_emails_batch_ch',
    '_get_uuids_for_emails_batch_pg',
    '_insert_users_list_with_batching',
    '_meta',
    '_safe_reset_calculating_state',
    '_safe_save_cohort_state',
    'calculate_people_ch',
    'cohortcalculationhistory_set',
    'cohortpeople_set',
    'count',
    'created_by_id',
    'enqueue_calculation',
    'errors_calculating',
    'errortrackingissuecohort_set',
    'experiment_set',
    'get_analytics_metadata',
    'get_cohort_type_display',
    'get_file_system_representation',
    'get_file_system_unfiled',
    'get_kind_display',
    'groups',
    'id',
    'insert_users_by_email',
    'insert_users_by_list',
    'insert_users_list_by_uuid',
    'insert_users_list_by_uuid_into_pg_only',
    'is_calculating',
    'is_flag_compatible',
    'last_calculation',
    'last_error_at',
    'objects',
    'pending_version',
    'people',
    'properties',
    'remove_user_by_uuid',
    'team_id',
    'to_dict',
    'version',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_skipped_fields_Dashboard
  list([
    'CreationMode',
    'DoesNotExist',
    'MultipleObjectsReturned',
    'PrivilegeLevel',
    'RestrictionLevel',
    '__annotations__',
    '__doc__',
    '__module__',
    '__repr__',
    '__str__',
    '_meta',
    'analytics_dashboards',
    'annotation_set',
    'created_by_id',
    'data_color_theme',
    'data_color_theme_id',
    'delete',
    'exportedasset_set',
    'featureflag_set',
    'featureflagdashboards_set',
    'get_analytics_metadata',
    'get_creation_mode_display',
    'get_file_system_representation',
    'get_file_system_unfiled',
    'get_next_by_created_at',
    'get_previous_by_created_at',
    'get_restriction_level_display',
    'grouptypemapping_set',
    'id',
    'insight_set',
    'is_shared',
    'is_sharing_enabled',
    'items',
    'last_accessed_at',
    'last_refresh',
    'objects',
    'objects_including_soft_deleted',
    'primary_dashboard_teams',
    'privileges',
    'share_token',
    'sharingconfiguration_set',
    'subscription_set',
    'tagged_items',
    'team_id',
    'tiles',
    'url',
    'userscenepersonalisation_set',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_skipped_fields_DashboardTile
  list([
    'DoesNotExist',
    'MultipleObjectsReturned',
    '__annotations__',
    '__doc__',
    '__module__',
    '_meta',
    'button_tile_id',
    'caching_state',
    'caching_states',
    'clean',
    'copy_to_dashboard',
    'dashboard_id',
    'dashboard_queryset',
    'filters_hash',
    'id',
    'insight_id',
    'last_refresh',
    'objects',
    'objects_including_soft_deleted',
    'prepare_move_to_dashboard',
    'refresh_attempt',
    'refreshing',
    'save',
    'sort_tiles_by_layout',
    'text_id',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_skipped_fields_EarlyAccessFeature
  list([
    'ActiveStage',
    'DoesNotExist',
    'MultipleObjectsReturned',
    'Stage',
    '__doc__',
    '__module__',
    '__repr__',
    '__str__',
    '_meta',
    'created_at',
    'feature_flag_id',
    'get_file_system_representation',
    'get_file_system_unfiled',
    'get_next_by_created_at',
    'get_previous_by_created_at',
    'get_stage_display',
    'id',
    'team_id',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_skipped_fields_Experiment
  list([
    'DoesNotExist',
    'ExperimentType',
    'MultipleObjectsReturned',
    'Status',
    '__annotations__',
    '__doc__',
    '__module__',
    '__str__',
    '_meta',
    'archived',
    'computed_status',
    'conclusion',
    'conclusion_comment',
    'created_at',
    'created_by_id',
    'deleted',
    'end_date',
    'experimentmetricresult_set',
    'experimenttimeseriesrecalculation_set',
    'experimenttosavedmetric_set',
    'exposure_cohort_id',
    'feature_flag_id',
    'get_analytics_metadata',
    'get_conclusion_display',
    'get_feature_flag_key',
    'get_file_system_representation',
    'get_file_system_unfiled',
    'get_next_by_created_at',
    'get_next_by_updated_at',
    'get_previous_by_created_at',
    'get_previous_by_updated_at',
    'get_stats_config',
    'get_status_display',
    'get_type_display',
    'holdout_id',
    'id',
    'is_draft',
    'is_launched',
    'is_running',
    'is_stopped',
    'save',
    'start_date',
    'status',
    'team_id',
    'updated_at',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_skipped_fields_ExperimentHoldout
  list([
    'DoesNotExist',
    'MultipleObjectsReturned',
    '__doc__',
    '__module__',
    '_meta',
    'created_at',
    'created_by_id',
    'experiment_set',
    'get_next_by_created_at',
    'get_next_by_updated_at',
    'get_previous_by_created_at',
    'get_previous_by_updated_at',
    'id',
    'save',
    'team_id',
    'updated_at',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_skipped_fields_ExperimentSavedMetric
  list([
    'DoesNotExist',
    'MultipleObjectsReturned',
    '__doc__',
    '__module__',
    '_meta',
    'created_at',
    'created_by_id',
    'experimenttosavedmetric_set',
    'get_next_by_created_at',
    'get_next_by_updated_at',
    'get_previous_by_created_at',
    'get_previous_by_updated_at',
    'id',
    'tagged_items',
    'team_id',
    'updated_at',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_skipped_fields_ExperimentToSavedMetric
  list([
    'DoesNotExist',
    'MultipleObjectsReturned',
    '__doc__',
    '__module__',
    '__str__',
    '_meta',
    'created_at',
    'experiment_id',
    'get_next_by_created_at',
    'get_next_by_updated_at',
    'get_previous_by_created_at',
    'get_previous_by_updated_at',
    'id',
    'objects',
    'saved_metric_id',
    'updated_at',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_skipped_fields_FeatureFlag
  list([
    'BUCKETING_IDENTIFIER_CHOICES',
    'DoesNotExist',
    'EVALUATION_RUNTIME_CHOICES',
    'MultipleObjectsReturned',
    '__annotations__',
    '__doc__',
    '__module__',
    '__str__',
    '_evaluation_tag_names',
    '_meta',
    '_payloads',
    'access',
    'aggregation_group_type_index',
    'analytics_dashboards',
    'conditions',
    'created_by_id',
    'deleted',
    'evaluation_tag_names',
    'experiment_set',
    'featureflagdashboards_set',
    'featureflagoverride_set',
    'features',
    'flag_evaluation_contexts',
    'get_analytics_metadata',
    'get_bucketing_identifier_display',
    'get_cohort_ids',
    'get_evaluation_runtime_display',
    'get_file_system_representation',
    'get_file_system_unfiled',
    'get_filters',
    'get_next_by_created_at',
    'get_payload',
    'get_previous_by_created_at',
    'has_feature_enrollment',
    'holdout',
    'id',
    'last_called_at',
    'last_modified_by_id',
    'objects',
    'objects_including_soft_deleted',
    'performed_rollback',
    'product_tours_internal_targeting_flag',
    'product_tours_linked_flag',
    'rollback_conditions',
    'rollout_percentage',
    'scheduled_changes_dispatcher',
    'super_conditions',
    'surveys_internal_response_sampling_flag',
    'surveys_internal_targeting_flag',
    'surveys_linked_flag',
    'surveys_targeting_flag',
    'tagged_items',
    'team_id',
    'transform_cohort_filters_for_easy_evaluation',
    'usage_dashboard',
    'usage_dashboard_has_enriched_insights',
    'usage_dashboard_id',
    'uses_cohorts',
    'variants',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_skipped_fields_Insight
  list([
    'DoesNotExist',
    'MATERIAL_INSIGHT_FIELDS',
    'MultipleObjectsReturned',
    '__annotations__',
    '__doc__',
    '__init__',
    '__module__',
    '__repr__',
    '__str__',
    '_meta',
    'alert_set',
    'alertconfiguration_set',
    'annotation_set',
    'are_alerts_supported',
    'caching_state',
    'caching_states',
    'created_by_id',
    'customerjourney_set',
    'dashboard',
    'dashboard_filters',
    'dashboard_id',
    'dashboard_tiles',
    'dashboards',
    'dive_dashboard',
    'dive_dashboard_id',
    'exportedasset_set',
    'filters_hash',
    'funnel',
    'generate_query_metadata',
    'get_effective_query',
    'get_file_system_representation',
    'get_file_system_unfiled',
    'get_next_by_last_modified_at',
    'get_next_by_updated_at',
    'get_previous_by_last_modified_at',
    'get_previous_by_updated_at',
    'id',
    'insightviewed_set',
    'is_sharing_enabled',
    'last_modified_at',
    'last_modified_by_id',
    'last_refresh',
    'objects',
    'objects_including_soft_deleted',
    'query_from_filters',
    'refresh_attempt',
    'refreshing',
    'save',
    'sharingconfiguration_set',
    'short_id',
    'show_legend',
    'subscription_set',
    'surveys_linked_insight',
    'tagged_items',
    'team_id',
    'threshold_set',
    'type',
    'url',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_skipped_fields_Survey
  list([
    'DoesNotExist',
    'MultipleObjectsReturned',
    'Schedule',
    'SurveySamplingIntervalType',
    'SurveyType',
    '__doc__',
    '__module__',
    '_meta',
    'created_by_id',
    'get_file_system_representation',
    'get_file_system_unfiled',
    'get_internal_flag_ids',
    'get_next_by_created_at',
    'get_next_by_updated_at',
    'get_previous_by_created_at',
    'get_previous_by_updated_at',
    'get_response_sampling_interval_type_display',
    'get_schedule_display',
    'get_type_display',
    'headline_response_count',
    'headline_summary',
    'id',
    'internal_response_sampling_flag',
    'internal_response_sampling_flag_id',
    'internal_targeting_flag',
    'internal_targeting_flag_id',
    'is_publicly_shareable',
    'linked_flag',
    'linked_flag_id',
    'linked_insight_id',
    'question_summaries',
    'response_archives',
    'targeting_flag',
    'targeting_flag_id',
    'team_id',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_skipped_fields_Survey_actions
  list([
    'DoesNotExist',
    'MultipleObjectsReturned',
    '__doc__',
    '__module__',
    '_meta',
    'action_id',
    'id',
    'objects',
    'survey_id',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_skipped_fields_Text
  list([
    'DoesNotExist',
    'MultipleObjectsReturned',
    '__doc__',
    '__module__',
    '_meta',
    'created_by_id',
    'dashboard_tiles',
    'get_next_by_last_modified_at',
    'get_previous_by_last_modified_at',
    'id',
    'last_modified_at',
    'last_modified_by_id',
    'objects',
    'team_id',
  ])
# ---
